# Primis

./: CMakeLists.txt  README.md
src/: Primis.hpp  pch.hpp
src/Platform/MacOS/: MacOSWindow.hpp
src/Primis/: Application.cpp  Application.hpp  EntryPoint.hpp  Log.cpp  Log.hpp  Window.hpp
src/Primis/Core/: Core.hpp  KeyCodes.hpp  MouseCodes.hpp
src/Primis/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
